--- a/EMurphyC196/app/src/main/res/values/themes.xml
+++ b/EMurphyC196/app/src/main/res/values/themes.xml
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.EMurphyC196.NoActionBar">
+    <style name="Theme.EMurphyC196.NoActionBar" parent="Theme.MaterialComponents.Light">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
@@ -22,4 +22,5 @@
     <style name="Theme.EMurphyC196.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.EMurphyC196.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
 </resources>
